# OmnisStream-Core

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  SPEC_PIN.txt
.github/workflows/: ci.yml  release.yml
crates/omnisstream/: Cargo.toml  build.rs
crates/omnisstream/src/: api.rs  fs_util.rs  hashing.rs  ingest_backend.rs  inspect.rs  lib.rs  manifest.rs  object_version.rs  part_store.rs  pb.rs  reader.rs  repo.rs  upload.rs
crates/omnisstream/tests/: api_surface.rs
crates/omnisstream_backend_api/: Cargo.toml
crates/omnisstream_backend_api/src/: lib.rs
crates/omnisstream_bench/: Cargo.toml
crates/omnisstream_bench/src/: main.rs
crates/omnisstream_benchdiff/: Cargo.toml
crates/omnisstream_benchdiff/src/: main.rs
crates/omnisstream_cli/: Cargo.toml  build.rs
crates/omnisstream_cli/src/: main.rs
crates/omnisstream_ffi/: Cargo.toml  cbindgen.toml
crates/omnisstream_ffi/src/: lib.rs
docs/: ffi_cmake.md
examples/cpp_smoke/: CMakeLists.txt  main.cpp
include/: omnisstream_ffi.h
