[package]
name = "omnisstream_bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "omnisstream_bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
omnisstream = { path = "../omnisstream" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

