[package]
name = "omnisstream_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[features]
header-gen = ["dep:cbindgen"]

[dependencies]
omnisstream = { path = "../omnisstream" }

cbindgen = { version = "0.27.0", optional = true }

[[bin]]
name = "omnisstream_ffi_header"
path = "src/bin/header_gen.rs"
required-features = ["header-gen"]

